# medsmart

./: README.md  docker-compose-dev.yml  docker-compose-test.yml  env.example  pyproject.toml  tox.ini
authors/: admin.py  models.py  serializers.py  tests.py  views.py
authors/migrations/: 0001_initial.py  0002_alter_author_name.py
books/: models.py  serializers.py  tests.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_unique_together.py
core/: settings.py  urls.py
