[tool.poetry]
name = "medsmart"
version = "0.1.0"
description = ""
authors = ["Guillaume <7831777+GuillaumeOj@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg = { extras = ["binary"], version = "^3.1.19" }
python-dotenv = "^1.0.1"
drf-spectacular = { extras = ["sidecar"], version = "^0.27.2" }
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest-django = "^4.8.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
